[metadata]
name = python-inotify
version = 0.6.0
author = Martin Ortbauer
author_email = mortbauer@gmail.com
description = Interface to Linux inotify subsystem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mortbauer/python-inotify
project_urls =
    Bug Tracker = https://github.com/mortbauer/python-inotify
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
